webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
/* ... */
.switch > input:checked + label:after {
  -webkit-transform: translateX(24px);
  -ms-transform: translateX(24px);
  transform: translateX(24px);
  box-shadow: -1px 1px 2px rgba(0,0,0,0.2);
}
.switch.switch-text > input + label:before {
  content: "off";
  color: #777;
  left: 18px;
  font-weight: normal;
  font-size: 11px;
  position: absolute;
  top:1px;
}
.switch.switch-text > input:checked + label:before {
  content: "on";
  color: #fff;
  left: 6px;
  top:1px;
}
/* BOX */
.box{
  margin-bottom: 14px;
  border-top-width:2px;
}
h3.box-title {
  padding:0;
}
.nav-tabs-custom>.nav-tabs, .box-header.with-border,.nav-tabs-custom>.nav-tabs>li.active>a{
  border-color: #e2e2e2 !important;
}
.nav-tabs-custom>.nav-tabs>li.active>a,.nav-tabs-custom>.nav-tabs>li.active>a:hover{
  border-bottom:none !important;
}
.box.has-toolbar{
  margin-bottom:65px;
}
.row.title{
  margin-bottom:50px;
  position:relative;
}
.box.box-title{
  border-top:none;
  position:absolute;
  top:-15px;
}
.box.box-title > h4{
  color:#555;
  font-size:24px;
  display:inline-block;
}
.box.box-title > h4 + .box-tools{
  margin-top:6px;
  margin-bottom:6px;
}
.box-header>.fa, .box-header>.glyphicon, .box-header>.ion, .box-header .box-title{
  color:#555;
}
.box .box-title .fa{
  color: #999;
  margin-right:10px;
}
.box-header.with-border.spacing{
  padding:3px 10px;
}
.box-header.with-border.spacing .box-title{
  min-height: 34px;
  display: inline-block;
  line-height: 34px;
}
.box-header.with-border.spacing >.box-tools {
  position: static;
}
.box-tools > .btn-xs {
  position:relative;
  top:-2px;
  max-height: 21px;
}
.box-tools > .btn-sm.btn-box-tool > .fa {
  font-size: 14px;
}
.btn-box-tool .fa-chevron-down,.btn-box-tool .fa-chevron-right {
  min-width: 15px;
}
.btn-box-tool .fa-chevron-right {
  top: -1px;
  position: relative;
}
.btn-box-tool.btn-sm .fa-chevron-right {
  top:2px;
}
.nav-tabs-custom>.nav-tabs.pull-right>li{
  margin-top:-2px;
}
.nav-tabs-custom>.nav-tabs>li {
  margin-right: 0;
}

.btn.btn-blue{
  background-color: #3694d1 !important;
  color: #fff !important;
  border: 1px solid #2173a9 !important;
}
.btn.btn-blue:active{
  box-shadow: inset 0 0 4px 1px #286090;
}
.btn.btn-blue:hover{
  background-color: #337ab7 !important;
  border-color: #2e6da4 !important;
  color: #fff !important;
}
.toggleTabFilter.updateTable{
  padding: 5px 10px !important;
  border-bottom:none !important;
}
.box-tools > .btn > .fa,.box-tools > .btn > .glyphicon,.box-tools > .btn > .ion{
  margin-left: 6px;
}
.btn.new-icon:after{
  content: "\f055";
  font: normal normal normal 14px/1 FontAwesome;
  font-size: 1.2em;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  position: relative;
  margin-left: 7px;
  top: 1px;
}

/* JUMBOTRON */
.rudder-jumbotron > .jumbotron{
  background-color:transparent;
  padding:60px;
}

/* DEPRECATION */
.deprecation-icon {
  color: #f08004;
  top: -5px;
  left: -3px;
  position: relative;
  margin-right: -2px;
}
.deprecation-icon.migration {
  color: #999;
}
img.deprecation-icon{
  height:14px;
  color:initial;
}
.tooltip-content .deprecation-icon{
  left:0;
}
.tooltip-content p > b:first-child{
  margin-left:8px;
}
.tooltip-content.policy-mode p > b{
  margin-left:0 !important;
}
.tooltip-content.policy-mode.audit p > b{
  color:#3694d1;
}
.tooltip-content.policy-mode.enforce p > b{
  color:#9BC832;
}
.deprecation-icon.fa-times{
  left:-2px;
  margin-right: 2px;
}
.tooltip-content .deprecation-icon.fa-times{
  left: 2px;
}
.tooltip-content .info-dsc{
  margin-top:5px;
}
.tooltip-content b, b.dsc{
  margin-left: 0 !important;
}
b.dsc {
  color:#440e62;
}
.treeActiveTechniqueName.isDeprecated{
  text-decoration:line-through;
}
span.techversion {
  font-weight: 300;
  color: #777;
  font-size: 10px;
}
.directiveNode .rudder-label + .tooltip{
  margin-left: 80px;
}
.directiveNode .rudder-label + .tooltip .tooltip-arrow{
  margin-left: -85px;
}
.tooltip-content.directive .fa, .tooltip-content.directive .deprecation-icon {
  margin-right:5px;
  text-align:center;
}

/* ICONS */
.dsc-icon{
  background-position : center;
  background-image    : url(../../images/dsc-icon.svg);
  background-repeat   : no-repeat;
  background-size     : contain;
  margin-top : -6px;
  position   : relative;
  display    : inline-block;
  height     : 20px;
  width      : 16px;
  top        : 5px;
}
.fa.warnicon{
  margin-left:8px;
  font-size:32px;
  color:#f08004;
}
#confirmDeletion .fa.warnicon{
  font-size: 22px;
  margin-left: 0;
}
.fa.targetRemove{
  margin:2px;
  cursor:pointer;
}
table a > i.fa-pencil{
  color:#555;
  transition-duration:.2s;
}
table a > i.fa-pencil:hover{
  color:#333;
}
/* RULES TABLE */
#grid_rules_grid_zone td.statusCell span.tooltip.tooltipable:after,#grid_dependentRulesGrid td.statusCell span.tooltip.tooltipable:after {
  content: "\f059";
  font: normal normal normal 14px/1 FontAwesome;
  font-size: 1em;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  position: relative;
  margin-left: 7px;
  color: #999;
}

.statusCell > span.tooltipable.tooltip {
  opacity: 1;
  font-family: inherit;
  position: static;
  font-size: 14px;
  cursor: help;
  color:#999;
}

/* TABS */
.ui-tabs-nav {
  border-bottom : 2px solid #e9e9e9;
}
.ui-tabs-nav > .ui-tabs-tab {
  display: inline-block;
  padding: 6px 10px;
  margin: 0;
  font-size: 1.2em;
  outline: none !important;
  position:relative;
}
.ui-tabs-nav > .ui-tabs-tab > a {
  color: #777;
  transition-property: color;
  transition-duration: .2s;
  font-size: 15px;
}
.ui-tabs-nav > .ui-tabs-tab > a:hover {
  color: #3c8dbc;
}
.ui-tabs-nav > .ui-tabs-tab.ui-tabs-active > a {
  color  : #333 !important;
  cursor : default;
}
.ui-tabs-nav > .ui-tabs-tab:before {
  content: "";
  position: absolute;
  bottom : -3px;
  left   : 0;
  right  : 0;
  height : 3px;
  background-color : transparent;
  transition-property : background-color;
  transition-duration : .2s;
}
/* ... */

